traefik_shell_canary/ingressroute.yaml
# apiVersion: traefik.io/v1alpha1
# kind: Middleware
# metadata:
#   name: https-redirectscheme
# spec:
#   redirectScheme:
#     permanent: true
#     scheme: https

# ---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: host-routes
  # annotations:
  #   cert-manager.io/issuer: letsencrypt-prod
spec:
  # tls:
  #   certResolver: letsencrypt
  #   secretName: proactivemonitoring
    # domains:
    #   - main: shell.canary.monitoring.ronpos.com
    #     sans:
    #       - prometheus.shell.canary.monitoring.ronpos.com
  entryPoints:
    - web
  routes:
    # - match: Host(`proactivemonitoring.opensearch.staging.ronpos.com`)
    #   kind: Rule
    #   services:
    #     - name: opensearch-dashboards
    #       port: 5601 
    #   middlewares:
    #     - name: https-redirectscheme
    - match: Host(`prometheus.shell.canary.monitoring.ronpos.com`)
      kind: Rule
      services:
        - name: prometheus-service
          port: 9090
      # middlewares:
      #   - name: https-redirectscheme
