traefik_shell_canary/noingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - proactivemonitoring.staging.ronpos.com
      secretName: proactivemonitoring
  rules:
    - host: proactivemonitoring.staging.ronpos.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opensearch-dashboards
                port:
                  number: 5601
